--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.2.54",
     "@types/react-dom": "^18.2.18",
     "@types/react-router-dom": "^5.3.3",
+    "aframe": "^1.6.0",
     "axios": "^1.6.7",
     "classnames": "^2.5.1",
     "react": "^18.2.0",
