--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,11 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "name": "ExaThought Office Tour",
+  "short_name": "VR Office Tour",
+ 
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "sizes": "64x64",
       "type": "image/x-icon"
     },
     {
