--- a/package.json
+++ b/package.json
@@ -23,11 +23,17 @@
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "workbox-core": "^7.1.0",
+    "workbox-expiration": "^7.1.0",
+    "workbox-precaching": "^7.1.0",
+    "workbox-routing": "^7.1.0",
+    "workbox-strategies": "^7.1.0",
+    "workbox-webpack-plugin": "^7.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && npx workbox generateSW workbox-config.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -51,6 +57,9 @@
   },
   "devDependencies": {
     "@types/aframe": "^1.2.7",
-    "tailwindcss": "^3.4.1"
+    "@types/workbox-window": "^5.0.0",
+    "gh-pages": "^6.1.1",
+    "tailwindcss": "^3.4.1",
+    "workbox-cli": "^7.1.0"
   }
 }
