--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,10 @@
 {
-  "name": "ExaThought Office Tour",
   "short_name": "VR Office Tour",
- 
+  "name": "ExaThought Office Tour",
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "64x64",
+      "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
