--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
       "dom.iterable",
       "esnext"
     ],
+    "types": ["react-scripts", "workbox-window"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
