--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && npx workbox generateSW workbox-config.js",
+    "build": "react-scripts build ", 
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -62,4 +62,5 @@
     "tailwindcss": "^3.4.1",
     "workbox-cli": "^7.1.0"
   }
+ 
 }
