--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build ", 
+    "build": "react-scripts build && npx workbox generateSW workbox-config.js",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -61,6 +63,6 @@
     "gh-pages": "^6.1.1",
     "tailwindcss": "^3.4.1",
     "workbox-cli": "^7.1.0"
-  }
- 
+  },
+  "homepage": "https://madhurya-exathought.github.io/vr-demo"
 }
