--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "VR Office Tour",
-    "name": "ExaThought Office Tour",
+    "short_name": "VR Tour",
+    "name": "VR Tour",
     "icons": [
       {
         "src": "favicon.ico",
